tests/fixtures/invalid/list_add_set.py
# Cannot add List[int] and Set[int]
x: list[int] = [1, 2, 3] + {1, 2, 3}
